# DataSeriesFinal

./: CMakeLists.txt  DataSeries.cpp  DataSeries.h  max.cpp  mean.cpp
.github/workflows/: ci.yml
